--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "folio",
+  "name": "portofolio",
   "version": "2.0.0",
+  "homepage": "https://Amineabali2003.github.io/abalimohammedamine.github.io",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "next build && npx gh-pages -d out/ --dotfiles"
   },
   "dependencies": {
     "@splinetool/react-spline": "^4.0.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.3",
     "gsap": "3.8.0",
     "next": "^15.3.5",
@@ -17,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.16.0",
     "sass": "^1.32.12",
+    "tailwind-merge": "^3.3.1",
     "typed.js": "^2.0.12",
     "vanilla-tilt": "^1.7.0"
   },
@@ -26,6 +31,7 @@
     "autoprefixer": "^10.4.7",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4",
     "typescript": "^4.2.4"
