--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "predeploy": "npm run build && npm run export",
+    "predeploy": "npm run build",
     "deploy": "next build && npx gh-pages -d out/ --dotfiles"
   },
   "dependencies": {
